# path_shortener

./: README.md  main.py  poc.ipynb  pyproject.toml  test_main.py
path_shortener/tests/: test_main.py
